# cnc-wumpus

./: .gitignore  README.md
etc/: ASPSolver.conf  Globals.conf  KnowledgeManager.conf  ProcessManaging.conf  Solver.conf  WWFGenerator.conf  WumpusEval.conf  WumpusWorldModel.conf  spawn_encodings_from_csv.py
etc/Misc/: taskrepository.tsk
etc/asp_background_knowledge/: actionsGenBase  actionsGenCheck  actionsGenStep  actions_gen.lp  actions_gen.rules  allOtherAgentsExhausted.lp  goal_generation.rules  objective.rules  path_validation.rules  planning (another copy).rules  planning (copy).rules  planning.rules  possibleNextBase.rules  possibleNextCheck.rules  possibleNextStep.rules  possibleNext_alternative.rules  regions.lp  safePathBase.rules  safePathStep.rules  safelyExploredPathExists.rules  shootFrom.rules  wumpus.lp  wumpus_agent.lp  wumpus_draftPerception.lp  wumpus_externals.lp  wumpus_new.lp  wumpus_objective.lp  wumpus_perception.lp  wumpus_planning.lp  wumpus_playground.lp  wumpus_stenchPerception.lp
etc/asp_background_knowledge/not_used/: actionsGenWumpus.rules  actions_gen.lp  path_validation.rules  planning (another copy).rules  planning (copy).rules  planning.rules  (+4 more)
etc/plans/: Reset.beh  WumpusMasterMaster.pml  WumpusMasterMaster.pmlex
etc/roles/: Roleset.graph  Roleset.pmlex  Roleset.rset  RolesetWumpus.graph  RolesetWumpus.pmlex  RolesetWumpus.rset  rolesDefinition.rdefset
wumpus_base/: CMakeLists.txt  package.xml
wumpus_base/include/: Base.h
wumpus_base/src/: Base.cpp
wumpus_evaluation/: CMakeLists.txt  CMakeListsOUT.txt  main.cpp  package.xml  run_combinations.cpp
wumpus_evaluation/sim/include/: EvalBase.h  WumpusSimulatorHeadless.h
wumpus_evaluation/sim/src/: EvalBase.cpp  WumpusSimulatorHeadless.cpp
wumpus_expressions/: CMakeLists.txt  package.xml
wumpus_expressions/autogenerated/include/: DomainBehaviour.h  DomainCondition.h  UtilityFunctionCreator.h
wumpus_expressions/autogenerated/include/Plans/: Reset.h  WumpusMasterMaster1571827339498.h
wumpus_expressions/autogenerated/include/Plans/SingleAgent/: InteractWithPlayground1534836538908.h  MyTurn1534836685239.h  NextAction1554202530131.h  Planning1551262808911.h  WumpusMaster1534835261527.h
wumpus_expressions/autogenerated/include/Plans/SingleAgent/Behaviours/: DetermineGoal.h  DetermineObjective.h  EvaluateActions.h  EvaluateGoal.h  GenerateActions.h  InitASPModel.h  LogPreviousResults.h  PerformAction.h  PerformNextAction.h  SpawnAgent.h  WaitForTurn.h
wumpus_expressions/autogenerated/include/Plans/SingleAgent/constraints/: InteractWithPlayground1534836538908Constraints.h  MyTurn1534836685239Constraints.h  NextAction1554202530131Constraints.h  Planning1551262808911Constraints.h  WumpusMaster1534835261527Constraints.h
wumpus_expressions/autogenerated/include/Plans/constraints/: WumpusMasterMaster1571827339498Constraints.h
wumpus_expressions/autogenerated/src/: BehaviourCreator.cpp  ConditionCreator.cpp  ConstraintCreator.cpp  DomainBehaviour.cpp  DomainCondition.cpp  UtilityFunctionCreator.cpp
wumpus_expressions/autogenerated/src/Plans/: Reset.cpp  WumpusMasterMaster1571827339498.cpp
wumpus_expressions/autogenerated/src/Plans/SingleAgent/: InteractWithPlayground1534836538908.cpp  MyTurn1534836685239.cpp  NextAction1554202530131.cpp  Planning1551262808911.cpp  WumpusMaster1534835261527.cpp
wumpus_expressions/autogenerated/src/Plans/SingleAgent/Behaviours/: DetermineGoal.cpp  DetermineObjective.cpp  EvaluateActions.cpp  EvaluateGoal.cpp  GenerateActions.cpp  InitASPModel.cpp  LogPreviousResults.cpp  PerformAction.cpp  PerformNextAction.cpp  SpawnAgent.cpp  WaitForTurn.cpp
wumpus_expressions/autogenerated/src/Plans/SingleAgent/constraints/: InteractWithPlayground1534836538908Constraints.cpp  MyTurn1534836685239Constraints.cpp  NextAction1554202530131Constraints.cpp  Planning1551262808911Constraints.cpp  WumpusMaster1534835261527Constraints.cpp
wumpus_expressions/autogenerated/src/Plans/constraints/: WumpusMasterMaster1571827339498Constraints.cpp
wumpus_msgs/: CMakeLists.txt  package.xml
wumpus_msgs/msg/: AgentPerception.msg
wumpus_worldmodel/: CMakeLists.txt  package.xml
wumpus_worldmodel/include/aspkb/: Extractor.h  IncrementalProblem.h  Integrator.h  PathExistsProblem.h  PossibleNextFieldGenerationProblem.h  Strategy.h  TermManager.h
wumpus_worldmodel/include/eval/: AgentInfo.h  CompletionStatus.h  Experiment.h  Result.h  Run.h  SpawnRequestStatus.h
wumpus_worldmodel/include/wumpus/: WumpusWorldModel.h
wumpus_worldmodel/include/wumpus/model/: Agent.h  AgentSet.h  DomainElement.h  Field.h  Objective.h  Playground.h
wumpus_worldmodel/include/wumpus/model/communication/: AgentPerceptions.h
wumpus_worldmodel/include/wumpus/wm/: ASPKnowledgeBase.h  ChangeHandler.h  Communication.h  Coordinates.h  Field.h  KnowledgeManager.h  PerceptionContainer.h  PlanningModule.h  Playground.h  WumpusAgent.h  WumpusDefinitions.h  WumpusSimData.h
wumpus_worldmodel/include/wumpus/wm/planning/: BlockageEvaluator.h  BlockageStatus.h  ExhaustionStatusEvaluator.h  GoalPlanner.h  ObjectiveEvaluator.h  PathActionsPlanner.h  Planner.h  SafePathExistsPlanner.h
wumpus_worldmodel/include/wumpus/wm/util/: PlannerUtils.h  ROSCommunicationUtil.h
wumpus_worldmodel/src/aspkb/: Extractor.cpp  IncrementalProblem.cpp  Integrator.cpp  PathExistsProblem.cpp  PossibleNextFieldGenerationProblem.cpp  TermManager.cpp
wumpus_worldmodel/src/eval/: Experiment.cpp  Result.cpp  Run.cpp
wumpus_worldmodel/src/wumpus/: WumpusWorldModel.cpp
wumpus_worldmodel/src/wumpus/model/: Agent.cpp  Field.cpp  Playground.cpp
wumpus_worldmodel/src/wumpus/wm/: ASPKnowledgeBase.cpp  ChangeHandler.cpp  Communication.cpp  Coordinates.cpp  Field.cpp  KnowledgeManager.cpp  PlanningModule.cpp  Playground.cpp  WumpusAgent.cpp  WumpusSimData.cpp
wumpus_worldmodel/src/wumpus/wm/planning/: BlockageEvaluator.cpp  ExhaustionStatusEvaluator.cpp  GoalPlanner.cpp  ObjectiveEvaluator.cpp  PathActionsPlanner.cpp  Planner.cpp  SafePathExistsPlanner.cpp
wumpus_worldmodel/src/wumpus/wm/util/: PlannerUtils.cpp
(+21 files in other folders)
