<?xml version="1.0"?>
<package format="2">
  <name>wumpus_base</name>
  <version>0.0.0</version>
  <description>The wumpus_base package</description>

  <maintainer email="info@das-lab.net">Carpe Noctem</maintainer>

  <license>MIT</license>

  <author email="info@das-lab.net">Carpe Noctem</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>alica_engine</depend>
  <depend>system_config</depend>
  <depend>roscpp</depend>
  <depend>wumpus_expressions</depend>
  <depend>wumpus_worldmodel</depend>
  <depend>message_generation</depend>
  <depend>alica_ros_proxy</depend>
  <depend>asp_solver_wrapper</depend>
  <depend>asp_solver</depend>


  <export>

  </export>
</package>
