<?xml version="1.0"?>
<package format="2">
  <name>wumpus_evaluation</name>
  <version>0.0.0</version>
  <description>The wumpus_evaluation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lisa@todo.todo">lisa</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>wumpus_simulator</depend>
  <depend>system_config</depend>
  <depend>qt_gui</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>alica_engine</depend>
  <depend>roscpp</depend>
  <depend>wumpus_expressions</depend>
  <depend>wumpus_worldmodel</depend>
  <depend>message_generation</depend>
  <depend>alica_ros_proxy</depend>
  <depend>robot_control</depend>
  <depend>asp_solver_wrapper</depend>
  <depend>asp_solver</depend>



  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
