<?xml version="1.0"?>
<package>
  <name>wumpus_expressions</name>
  <version>0.0.0</version>
  <description>The wumpus_expressions package</description>

  <maintainer email="info@das-lab.net">Carpe Noctem</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>wumpus_worldmodel</build_depend>
  <build_depend>alica_engine</build_depend>
  <build_depend>system_config</build_depend>
  <build_depend>autodiff</build_depend>
  <build_depend>system_util</build_depend>
  <build_depend>asp_commons</build_depend>
  <build_depend>asp_solver_wrapper</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>wumpus_worldmodel</run_depend>
  <run_depend>alica_engine</run_depend>
  <run_depend>system_config</run_depend>
  <run_depend>autodiff</run_depend>
  <run_depend>system_util</run_depend>
  <run_depend>asp_commons</run_depend>
  <run_depend>asp_solver_wrapper</run_depend>
  <export>
  </export>
</package>

