<?xml version="1.0"?>
<package format="2">
  <name>wumpus_expressions</name>
  <version>0.0.0</version>
  <description>The wumpus_expressions package</description>

  <maintainer email="info@das-lab.net">Carpe Noctem</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>wumpus_worldmodel</depend>
  <depend>wumpus_msgs</depend>
  <depend>alica_engine</depend>
  <depend>system_config</depend>
  <depend>system_util</depend>
  <depend>asp_solver_wrapper</depend>

  <export>
  </export>
</package>

